POC fix bug click MovieCard on mobile

--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -9,6 +9,7 @@
 }
 
 .clickReceiverDesktop, .clickReceiverMobile {
+  cursor: pointer;
   height: 100%;
   position: absolute;
   width: 100%;
